# ml_libraries

./: LICENSE  README.md  setup.cfg  setup.py
feature_scaling/: feature_scaling.py
ml_libraries/feature_scaling/: feature_scaling.py
ml_libraries/gradient_descent/: gradient_descent_regression.py
ml_libraries/neural_network/: first.py
ml_libraries/supervised/: decision_tree.py  knn.py
ml_libraries/unsupervised/: kmeans.py
neural_network/: activation_fns.py  error_fns.py  first.py
src/ml_libraries/neural_network/: activation_fns.py
unsupervised/: kmeans.py  knn.py
