[metadata]
name = ml-jburs
version = 0.0.1
author = Jason Bursey
author_email = jason.bursey1@gmail.com
description = python machine learning library for use with pandas data frames
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jburs/ml_libraries
project_urls =
    Bug Tracker = https://github.com/jburs/ml_libraries/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src